# alphas_sentinels

./: .gitignore  README.md  data.txt
sentinels/: pyproject.toml
sentinels/sentinels/: App.py  CreatePostgres.py  DataBase.py  DataBaseMongo.py  RegisterForm.py  Tab1AllCams.py  Tab2Register.py  Tab3.py  data.txt  main.py  test.py  teste.py
sentinels/sentinels/Tab1/: Tab1AllCams.py
sentinels/sentinels/Tab2/: QrFaceRecognition.py  Tab2Recognition.py  Tab2Register.py  face_model2.pkl  face_model5.pkl  funcionando.py
sentinels/sentinels/Tab3/: RegisterCam.py  RegisterForm.py  Tab3Register.py
sentinels/sentinels/Tab4/: Card.py  Tab4Card.py  Tab4Search.py
sentinels/sentinels/Tab5/: Tab5Search.py
