[tool.poetry]
name = "sentinels"
version = "0.1.0"
description = ""
authors = ["Athos Balmant <athos.kyoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
psycopg2 = "^2.9.5"
pyqt6 = "^6.4.2"
cryptography = "^39.0.2"
qrcode = "^7.4.2"
opencv-python-headless = "^4.7.0.72"
opencv-contrib-python = "^4.7.0.72"
scipy = "^1.10.1"
dlib = "^19.24.1"
pyinstaller = "^5.9.0"
pyzbar = "^0.1.9"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
